main text is now within word-count limits

--- a/manuscript/reply_to_reviewers.tex
+++ b/manuscript/reply_to_reviewers.tex
@@ -72,24 +72,22 @@
 % ----------------------------------------------------------------------
 {\Large \bf Reply to Reviewer \#1}
 % ---------------------------------------
-Preamble.
+
+
+	The Reviewer complimented our manuscript as ``well-written'' and addressing the ``hugely important'' question prior choice in network analyses. He/she supports our suggestion that researchers use their system-specific knowledge when embarking upon Bayesian analyses, and has suggested that we restructure the manuscript (especially the introduction) in order to come more directly to the issue of prior choice. In the present revision we have taken this advice to heart and streamlined our introduction in order to expand our discussion of prior choice. In this revision, we have retained some of the introductory material which the Reviewer notes describes ``ground very well-trod'' in order to ensure that readers entirely new to Bayesian analysis will understand the problem at hand. We hope that the introduction now strikes a balance between providing essential background information for Bayesian novices and moving quickly enough for those who do not need such a gentle introduction. We thank the Reviewer for their feedback and address each point (prefaced by \textbf{R:}) below.
+
 
 	1. Suggestion to refocus on prior selection
 
 		\begin{refquote}
-			Below I offer my thoughts on this well-written manuscript. Normally I condense my review into a few key points, but I found myself uncharacteristically divided with the paper as presented. At first, the introduction covers ground very well-trod by prior works and doesn’t really address its contribution. I was mostly frustrated by the rehashing of topics made by many previous papers, include many by the authors themselves. But then the paper seems to morph and pick up steam on L248. Rather than reaching towards an amorphous and grandiose “quantitative framework”, the authors briefly zoom into a very concise, and hugely important, question of choosing prior distributions for harnessing information among networks. This has been completely unexplored and merits attention. In ecology more broadly, priors are treated with timidity, as if we couldn’t dare to leverage past work on our current understanding. Personally, I have always felt limited by this standard. I applaud the authors for taking on this challenge, and I would like to see an introduction that merits and debates this question in much more detail. When should we use prior information? How do we go about constructing informed priors for networks? When can we use priors from the data in question? This is sometimes called approximate bayes (http://andrewgelman.com/2016/03/25/28321/), or empirical bayes, perhaps alluded to in the title, but not fully explained in the introduction. Should empirical priors be drawn from hyperpriors or fixed for each interaction? Can we combine qualitative information and quantitative information? This is all exciting ground that will open up new avenues for networks. Walking the reader through flat priors, informed priors and empirical priors is crucial for the importance of analysis to be understood by the reader. The use of empirical priors can be quite controversial, and should be atleast touched on in the discussion. \\
-			I’ve left my comments below on the introduction, but in my opinion, it should be almost wholly rewritten in favor of a more targeted question constructing networks using priors, which is the key novelty of the work and is mostly hidden by the current introduction. I’m not convinced any new analysis needs to be done, which speaks to the conflict between the current introduction and the actual data presented. I see the makings of a really nice paper here, and I’m confident the authors will be able to achieve this text revision.
-
-
-			At the same time, the paper is clear and very readable. I wholly support the method and I think it is something critical that needs to be adopted by the community. \\
-			Having read the paper several times, I think that the authors are trying to cast their net too widely, even starting from the title. From that perspective, they don’t meet the expectation of new insight. However!! I was extremely interested in the brief discussion on using prior knowledge, especially the delicacy of trying to transfer information among networks (L248). My recommendation is to drastically reduce the grandiose attempt at a “quantitative framework for networks” (L1 – L246) and really zoom in on the contribution of transferring information among networks through informed priors.	Again L278, this is very well covered in concept by recent papers in MEE that include the authors of this work, as well as several by Weinstein, Bartomeus and others.
+			In ecology more broadly, priors are treated with timidity, as if we couldn’t dare to leverage past work on our current understanding. Personally, I have always felt limited by this standard. I applaud the authors for taking on this challenge, and I would like to see an introduction that merits and debates this question in much more detail. ... Walking the reader through flat priors, informed priors and empirical priors is crucial for the importance of analysis to be understood by the reader. The use of empirical priors can be quite controversial, and should be atleast touched on in the discussion. 
 			\end{refquote}
 
 
-		\textbf{R:} We thank the Reviewer for his/her positive evaluation, and have done our utmost to reframe and tighten the introduction and framing of the paper. In doing so, we have happily adopted the suggestion to expand our discussion of prior selection, particularly with regard to approximate/empirical Bayes. Although we are somewhat space-limited, we have expanded our description of the different priors available and why a researcher might choose one over another (section beginning with line 245). We also touch upon the controversy over using empirical priors (lines 340-345) although we were unable to find many references addressing this in detail. We hope that this expanded description will be a better guide for empiricists who may not be familiar with Bayesian statistics.
+		\textbf{R:} We thank the Reviewer for his/her positive evaluation, and have done our utmost to reframe and tighten the introduction and framing of the paper. In doing so, we have happily adopted the suggestion to expand our discussion of prior selection, particularly with regard to approximate/empirical Bayes. Although we are somewhat space-limited, we have expanded our description of the different priors available and why a researcher might choose one over another (section beginning with line 253). We also touch upon the controversy over using empirical priors (lines 348-353) although we were unable to find many references addressing this in detail. We hope that this expanded description will be a better guide for empiricists who may not be familiar with Bayesian statistics.
 
 
-		In implementing the Reviewer's comments on our introduction, we believe that most readers who are less familiar with Bayesian procedures will need a quick outline of the problem of uncertain detection of interactions in order to be motivated to dive into the larger discussion of priors. We stress that our intended target audience is empirical ecologists working on network description who likely have a different skillset than that of the Reviewer. We also note that Reviewer 2 found that \emph{``The introduction is particularly pleasant to read and the problem is well stated"}, praise which we would hate to loose. Therefore we have revised and streamlined our introduction but still refrain from jumping straight into prior selection. We have, however, taken care to introduce our analysis as a worked example (lines 347) and hope that this helps to reduce the conflict between the introduction and our data. 
+		In implementing the Reviewer's comments on our introduction, we believe that most readers who are less familiar with Bayesian procedures will need a quick outline of the problem of uncertain detection of interactions in order to be motivated to dive into the larger discussion of priors. We stress that our intended target audience is empirical ecologists working on network description who likely have a different skillset than that of the Reviewer. We also note that Reviewer 2 found that \emph{``The introduction is particularly pleasant to read and the problem is well stated"}, praise which we would hate to loose. Therefore we have revised and streamlined our introduction but still refrain from jumping straight into prior selection. We have, however, taken care to introduce our analysis as a worked example (lines 355) and hope that this helps to reduce the conflict between the introduction and our data. 
 
 
 		Overall, we thank the Reviewer for their compliments and accept their suggestion that we are somewhat overexcited about our approach. Thus, we have refined the introduction to be more specific about the problem we are attempting to solve. We have also expanded our treatment of prior selection and hope that our paper now reads as achieving its goal.
@@ -101,7 +99,7 @@ Preamble.
 		The introduction flows well and is thoughtfully laid out. Given the enormous amount of literature in the field, it is not possible to provide a full set of citations. However, it seems remiss to not consider Jordano (2016) in the sampling section.
 		\end{refquote}
 
-		\textbf{R:} We thank the Reviewer for their compliments to our introduction and for the literature recommendations. We have incorporated these references as suggested (including Jordano, 2016 in the sampling section). Following comments from other reviewers, we have refined and slightly restructured our introduction in the hope of more clearly establishing the goal of our manuscript. We hope that this revised introduction will also meet with the Reviewer's approval. 
+		\textbf{R:} We thank the Reviewer for their compliments to our introduction and for the literature recommendations. We have incorporated these references as suggested (including Jordano, 2016 in the sampling section). Following comments from other reviewers, we have refined and restructured our introduction in the hope of more clearly establishing the goal of our manuscript. We hope that this revised introduction will also meet with the Reviewer's approval. 
 
 
 	3. Suggestion to de-emphasize MLE estimate and get straight to Bayes
@@ -853,7 +851,7 @@ Preamble.
 \clearpage
 
     \bibliographystyle{ecol_let} 
-    \bibliography{manual_abbrev} % Abbreviate journal titles.
+    \bibliography{manual} % Abbreviate journal titles.
 
 
 
